package model;

import java.util.ArrayList;

public class ClassList {
    private ArrayList<Class> classList;
    public ClassList(){
        this.classList = new ArrayList<>();
    }
}
