package model;

import java.io.Serializable;

public class Teacher implements Serializable
{

}
