@startuml

title __JAVAFXSCHEDULINGAPPLICATION's Class Diagram__\n

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class MyApplication {
    }
  }
  

  namespace  {
    namespace ontroller {
      class controller.CalendarViewController {
      }
    }
  }
  

  namespace  {
    namespace ontroller {
      class controller.RoomListController {
      }
    }
  }
  

  namespace  {
    namespace odel {
      interface model.Model {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.ModelManager {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Test {
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace calendar {
        class model.calendar.Day {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace calendar {
        class model.calendar.Lesson {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace calendar {
        class model.calendar.Semester {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace calendar {
        class model.calendar.Week {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.ClassOfStudents {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.ClassList {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.Course {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.CourseList {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.CourseTest {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.Teacher {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.TeacherList {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace rooms {
        class model.rooms.BookingTime {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace rooms {
        class model.rooms.Room {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace rooms {
        class model.rooms.RoomList {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace students {
        class model.students.Student {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace students {
        class model.students.StudentList {
        }
      }
    }
  }
  

  namespace  {
    namespace tilities {
      class utilities.Util {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.AnchorPaneNode {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.AnchorPaneNodeNav {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.CalendarView {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.NavCalendarView {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.RoomView {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.ViewHandler {
      }
    }
  }
  

  MyApplication -up-|> javafx.application.Application
  MyApplication o-- view.ViewHandler : view
  controller.CalendarViewController o-- model.Model : model
  controller.CalendarViewController o-- view.NavCalendarView : navCalendarView
  controller.CalendarViewController o-- view.ViewHandler : viewHandler
  controller.RoomListController o-- model.rooms.RoomList : rooms
  model.ModelManager .up.|> model.Model
  model.ModelManager o-- model.courses.ClassList : classList
  model.ModelManager o-- model.courses.CourseList : courseList
  model.ModelManager o-- model.rooms.RoomList : roomList
  model.ModelManager o-- model.calendar.Semester : semester
  model.ModelManager o-- model.students.StudentList : studentList
  model.calendar.Day .up.|> java.io.Serializable
  model.calendar.Lesson .up.|> java.io.Serializable
  model.calendar.Week .up.|> java.io.Serializable
  model.courses.ClassOfStudents .up.|> java.io.Serializable
  model.courses.ClassOfStudents o-- model.students.StudentList : studentList
  model.courses.Course .up.|> java.io.Serializable
  model.courses.Course o-- model.courses.ClassOfStudents : classOfStudents
  model.courses.Course o-- model.students.StudentList : participants
  model.courses.Course o-- model.courses.TeacherList : teacherList
  model.courses.Teacher .up.|> java.io.Serializable
  model.courses.TeacherList .up.|> java.io.Serializable
  model.rooms.BookingTime .up.|> java.io.Serializable
  model.rooms.Room .up.|> java.io.Serializable
  model.rooms.RoomList .up.|> java.io.Serializable
  model.students.Student .up.|> java.io.Serializable
  model.students.StudentList .up.|> java.io.Serializable
  view.AnchorPaneNode -up-|> javafx.scene.layout.AnchorPane
  view.AnchorPaneNodeNav -up-|> javafx.scene.layout.AnchorPane
  view.CalendarView -up-|> javafx.scene.Node
  view.ViewHandler o-- controller.CalendarViewController : calendarViewController
  view.ViewHandler o-- model.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
